more tests for topic service