@@ -6,11 +6,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.site.forum.common.exception.InvalidTopicIdException;
 import org.site.forum.common.exception.UserNotFoundException;
 import org.site.forum.config.auth.AuthenticationService;
 import org.site.forum.domain.file.dao.FileDao;
-import org.site.forum.domain.file.entity.File;
-import org.site.forum.domain.file.mapper.FileMapper;
 import org.site.forum.domain.file.service.FileService;
 import org.site.forum.domain.topic.dao.TopicDao;
 import org.site.forum.domain.topic.dto.request.TopicRequestDto;
@@ -24,17 +23,10 @@ import org.site.forum.domain.user.service.UserService;
 import org.springframework.web.multipart.MultipartFile;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static org.site.forum.constants.TestConstants.CONTENT;
-import static org.site.forum.constants.TestConstants.TITLE;
-import static org.site.forum.constants.TestConstants.UUID_CONSTANT;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class TopicServiceTests {
@@ -47,9 +39,6 @@ class TopicServiceTests {
 
     @Mock
     private TopicMapper topicMapper;
-
-    @Mock
-    private FileMapper fileMapper;
 
     @Mock
     private FileService fileService;
@@ -74,93 +63,96 @@ class TopicServiceTests {
 
     private User user;
     private Topic topic;
-    private File file;
     private TopicRequestDto topicRequestDto;
-    private TopicResponseDto topicResponseDto;
 
     @BeforeEach
     void setUp() {
-        user = User.builder()
-                .id(UUID.randomUUID())
-                .build();
-
-        file = File.builder()
-                .id(UUID.randomUUID())
-                .minioObjectName("test-file.txt")
-                .contentType("text/plain")
-                .topic(topic)
-                .build();
-
-        topicRequestDto = TopicRequestDto.builder()
-                .title(TITLE)
-                .content(CONTENT)
-                .build();
-
-        topic = Topic.builder()
-                .title(TITLE)
-                .content(CONTENT)
-                .author(user)
-                .build();
-
-        topicResponseDto = TopicResponseDto.builder()
-                .title(TITLE)
-                .content(CONTENT)
-                .author(user)
-                .files(fileMapper.toDto(List.of(file)))
-                .build();
+        user = User.builder().id(UUID.randomUUID()).build();
+        topic = Topic.builder().title("Test Title").content("Test Content").author(user).build();
+        topicRequestDto = TopicRequestDto.builder().title("Test Title").content("Test Content").build();
     }
 
     @Test
     void testCreateTopic() {
-        List<MultipartFile> files = Collections.emptyList();
-
         when(authenticationService.getAuthenticatedUser()).thenReturn(user);
         when(topicMapper.toEntity(topicRequestDto, user)).thenReturn(topic);
         when(topicDao.saveTopic(topic)).thenReturn(topic);
+        when(fileDao.findFilesByTopicId(topic.getId())).thenReturn(Collections.emptyList());
+        when(topicMapper.toDto(topic, Collections.emptyList())).thenReturn(new TopicResponseDto());
 
-        when(fileDao.findFilesByTopicId(topic.getId())).thenReturn(List.of(file));
-        when(topicMapper.toDto(topic, List.of(file))).thenReturn(topicResponseDto);
-
-        TopicResponseDto response = topicService.saveTopic(topicRequestDto, files);
+        TopicResponseDto response = topicService.saveTopic(topicRequestDto, Collections.emptyList());
 
         assertNotNull(response);
-        assertEquals(topicResponseDto, response);
-
-        verify(authenticationService).getAuthenticatedUser();
-        verify(topicMapper).toEntity(topicRequestDto, user);
-        verify(topicDao).saveTopic(topic);
-        verify(topicMapper).toDto(topic, List.of(file));
+        verify(fileDao).findFilesByTopicId(topic.getId());
     }
 
     @Test
     void testCreateTopicIfUserIsNull() {
         when(authenticationService.getAuthenticatedUser()).thenReturn(null);
-
-        Exception exception = assertThrows(UserNotFoundException.class, () -> topicService.saveTopic(topicRequestDto, List.of(multipartFile)));
-        assertEquals("User not found", exception.getMessage());
-
-        verify(authenticationService).getAuthenticatedUser();
-        verify(userService, never()).saveUser(any());
-        verify(topicMapper, never()).toEntity(any(), any());
+        assertThrows(UserNotFoundException.class, () -> topicService.saveTopic(topicRequestDto, List.of(multipartFile)));
         verify(topicDao, never()).saveTopic(any());
     }
 
     @Test
-    void testGetTopic(){
-        List<File> files = List.of(file);
+    void testGetTopic() {
+        UUID topicId = UUID.randomUUID();
+        when(topicDao.getTopic(topicId)).thenReturn(topic);
+        when(fileDao.findFilesByTopicId(topicId)).thenReturn(Collections.emptyList());
+        when(topicMapper.toDto(topic, Collections.emptyList())).thenReturn(new TopicResponseDto());
 
-        when(topicDao.getTopic(UUID.fromString(UUID_CONSTANT))).thenReturn(topic);
-        when(fileDao.findFilesByTopicId(UUID.fromString(UUID_CONSTANT))).thenReturn(files);
-        when(topicMapper.toDto(topic, files)).thenReturn(topicResponseDto);
-
-        TopicResponseDto response = topicService.getTopic(UUID.fromString(UUID_CONSTANT));
+        TopicResponseDto response = topicService.getTopic(topicId);
 
         assertNotNull(response);
-        assertEquals(topicResponseDto, response);
+        verify(fileDao).findFilesByTopicId(topicId);
+    }
 
-        verify(topicDao).getTopic(UUID.fromString(UUID_CONSTANT));
-        verify(fileDao).findFilesByTopicId(UUID.fromString(UUID_CONSTANT));
-        verify(topicMapper).toDto(topic, List.of(file));
+    @Test
+    void testDeleteTopic() {
+        UUID topicId = UUID.randomUUID();
+        when(topicDao.getTopic(topicId)).thenReturn(topic);
+        topicService.deleteTopic(topicId);
+        verify(topicDao).deleteTopic(topicId);
+    }
+
+    @Test
+    void testDeleteTopicWhenTopicNotFound() {
+        UUID topicId = UUID.randomUUID();
+        when(topicDao.getTopic(topicId)).thenThrow(new InvalidTopicIdException("Not found"));
+        assertThrows(InvalidTopicIdException.class, () -> topicService.deleteTopic(topicId));
+    }
+
+    @Test
+    void testCreateTopicWithFiles() {
+        when(authenticationService.getAuthenticatedUser()).thenReturn(user);
+        when(topicMapper.toEntity(topicRequestDto, user)).thenReturn(topic);
+        when(topicDao.saveTopic(topic)).thenReturn(topic);
+        when(fileDao.findFilesByTopicId(topic.getId())).thenReturn(Collections.emptyList());
+        when(topicMapper.toDto(topic, Collections.emptyList())).thenReturn(new TopicResponseDto());
+
+        topicService.saveTopic(topicRequestDto, List.of(multipartFile));
+
+        verify(fileService).uploadFiles(List.of(multipartFile), topic);
+    }
+
+    @Test
+    void testSaveUserIfNotPersisted() {
+        User newUser = User.builder().id(UUID.randomUUID()).build();
+        when(authenticationService.getAuthenticatedUser()).thenReturn(newUser);
+        when(userDao.getUserById(newUser.getId())).thenReturn(Optional.empty());
+        when(topicMapper.toEntity(topicRequestDto, newUser)).thenReturn(topic);
+        when(topicDao.saveTopic(topic)).thenReturn(topic);
+        when(fileDao.findFilesByTopicId(topic.getId())).thenReturn(Collections.emptyList());
+        when(topicMapper.toDto(topic, Collections.emptyList())).thenReturn(new TopicResponseDto());
+
+        topicService.saveTopic(topicRequestDto, Collections.emptyList());
+
+        verify(userService).saveUser(newUser);
+    }
+
+    @Test
+    void testGetTopicWithNullId() {
+        doThrow(new InvalidTopicIdException("Test")).when(topicDataIntegrity).validateTopicId(null);
+        assertThrows(InvalidTopicIdException.class, () -> topicService.getTopic(null));
     }
 
 }
